<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="moment_title">朋友圈</string>
    <string name="moment_video">视频</string>
    <string name="moment_delete">删除</string>
    <string name="moment_reply">回复</string>
    <string name="moment_notice_empty">暂无朋友圈消息</string>
    <string name="moment_timeline_empty">空空如也</string>
    <string name="moment_compose_hint">这一刻的想法…</string>
    <string name="moment_select_location">选择位置</string>
    <string name="moment_mention_title">提醒谁看</string>
    <string name="moment_visibility_title">谁可以看</string>
    <string name="moment_visibility_public">公开</string>
    <string name="moment_visibility_private">私有</string>
    <string name="moment_visibility_partial">部分可见</string>
    <string name="moment_visibility_exclude">不给谁看</string>
    <string name="moment_visibility_public_desc">公开\n所有朋友可见</string>
    <string name="moment_visibility_private_desc">私有\n仅自己可见</string>
    <string name="moment_visibility_partial_desc">部分可见\n选中的朋友可见</string>
    <string name="moment_visibility_exclude_desc">不给谁看\n选中的朋友不可见</string>
    <string name="moment_select_contacts">从通讯录选择</string>
    <string name="moment_select_tags">从标签选择</string>
    <string name="moment_tag_empty">暂无标签</string>
    <string name="moment_status_title">朋友圈状态</string>
    <string name="moment_state_tip">开启后将立即生效，并影响双方朋友圈可见范围。</string>
    <string name="moment_state_block_me">不让他看我</string>
    <string name="moment_state_hide_him">不看他</string>
    <string name="moment_state_load_failed">获取朋友圈状态失败</string>
    <string name="moment_state_save_failed">设置失败，请稍后重试</string>
    <string name="moment_minutes_ago">分钟前</string>
    <string name="moment_hours_ago">小时前</string>
    <string name="moment_days_ago">天前</string>
    <string name="moment_publish">发送</string>
    <string name="moment_my_timeline">我的朋友圈</string>
    <string name="moment_notice_title">朋友圈消息</string>
    <string name="moment_cover_title">封面</string>
    <string name="moment_visibility_done">完成</string>
    <string name="moment_select_media_first">先选择图片或视频</string>
    <string name="moment_max_image_count">最多选择9张图片</string>
    <string name="moment_publish_success">发布成功</string>
    <string name="moment_publish_failed">发布失败</string>
    <string name="moment_cover_update_success">封面已更新</string>
    <string name="moment_action_publish">发表朋友圈</string>
    <string name="moment_action_cover">更换封面</string>
    <string name="moment_action_notice">朋友圈消息</string>
    <string name="moment_location_hint">输入位置名称</string>
    <string name="moment_location_title">位置</string>
    <string name="moment_comment_hint">输入评论内容</string>
    <string name="moment_comment_title">评论</string>
    <string name="moment_comment_action">评论</string>
    <string name="moment_comment_empty">评论不能为空</string>
    <string name="moment_like_action">点赞</string>
    <string name="moment_cancel_action">取消</string>
    <string name="moment_delete_confirm">确认删除这条朋友圈吗？</string>
    <string name="moment_delete_comment_confirm">确认删除这条评论吗？</string>
    <string name="moment_choose_media">选择图片/视频</string>
    <string name="moment_take_media">拍照/图片或视频</string>
    <string name="moment_choose_album">从相册中获取</string>
    <string name="moment_text_post">发表文字</string>
    <string name="moment_notice_like">%1$s 赞了你的动态</string>
    <string name="moment_notice_comment">%1$s 评论了你的动态</string>
    <string name="moment_notice_reply">%1$s 回复了你的评论</string>
    <string name="moment_notice_mention">%1$s 提到了你</string>
    <string name="moment_notice_banner_count">%1$d 条新消息</string>
    <string name="moment_notice_like_simple">赞了你</string>
    <string name="moment_notice_comment_simple">评论了你</string>
    <string name="moment_notice_reply_simple">回复了你</string>
    <string name="moment_notice_mention_simple">提到了你</string>
    <string name="moment_selected_users">已选择%1$d位用户</string>
    <string name="moment_selected_tags">已选择%1$d个标签</string>
    <string name="moment_unavailable">暂未接入</string>
    <string name="moment_only_one_video">不允许同时存在视频与图片</string>
</resources>
